tests/should-fail/using-non-exported-constructor.ls
import io;

unIO (IO a) = a;
